// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary component with 1 expense 1`] = `
<div>
  <p>
    Displaying 
    1
     
    expense
     totalling 
    $2.35
     
  </p>
</div>
`;

exports[`should render ExpensesSummary component with multiple expense 1`] = `
<div>
  <p>
    Displaying 
    4
     
    expenses
     totalling 
    $2,350.00
     
  </p>
</div>
`;
